--- a/client/package.json
+++ b/client/package.json
@@ -13,27 +13,30 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "@mui/x-data-grid": "^7.9.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.407.0",
     "next": "15.1.7",
     "numeral": "^2.0.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "uuid": "^10.0.0"
-
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/numeral": "^2.0.5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tw-colors": "^3.3.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
