--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.2.0",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
