--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.1",
@@ -32,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
