--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.24",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
